--- a/css/main.css
+++ b/css/main.css
@@ -107,6 +107,12 @@ textarea {
      margin-bottom: 1em;
    }
 
+   .top {
+     margin-top: 5%;
+     width: 85%;
+     margin: 0 auto;
+   }
+
    .wage-display {
      font-size: 2.5em;
    }
@@ -119,12 +125,14 @@ textarea {
      margin: 1rem;
    }
 
-   #dollar {
+   #dollar,
+   #cents {
      margin-right: 1.5rem;
+     width: 25%;
    }
 
    .wage-display-group {
-     width: 18%;
+     width: 50%;
      color: #faf5ed;
      background-color: #2274A5;
      margin: 0 auto;
@@ -161,12 +169,12 @@ textarea {
      justify-content: center;
    }
    .coin {
-     width: 100px;
+     width: 10%;
      margin: 1rem;
    }
 
    #coindiv {
-     width: 60%;
+     width: 75%;
      height: 30%;
      margin:0 auto;
    }
@@ -174,9 +182,41 @@ textarea {
    #pigdiv {
      margin: 0 auto;
      width: 36%;
+     display: none;
    }
    #pbank {
      width: 100%;
+   }
+
+   @media (max-width: 600px) {
+     .wage-display-group {
+       width: 85%;
+     }
+
+     #dollar-section,
+     #cents-section {
+       width: 75%;
+       margin: 0 auto;
+     }
+
+     #dollar,
+     #cents {
+       width: 85%;
+     }
+
+     #coindiv {
+       width: 100%;
+       height: auto;
+     }
+
+     .coin {
+       width: 18%;
+       margin: 1rem;
+     }
+
+     #pigdiv {
+       width: 90%;
+     }
    }
 
 /* ==========================================================================
