--- a/css/main.css
+++ b/css/main.css
@@ -140,6 +140,8 @@ textarea {
      border-radius: 1.5em;
    }
 
+
+
    button {
      display: inline-block;
      background-color: #4CAF50;
@@ -160,6 +162,11 @@ textarea {
 
    #stopbtn {
      margin-left: 10px;
+     background-color: #cc0000;
+   }
+
+   #stopbtn:hover {
+     background-color: #ff1a1a;
    }
 
    .container {
@@ -236,6 +243,94 @@ textarea {
        width: 90%;
      }
    }
+/* Slider Styling */
+
+input[type=range] {
+  -webkit-appearance: none;
+  width: 100%;
+  margin: 17.8px 0;
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 11.4px;
+  cursor: pointer;
+  box-shadow: 0px 0px 1px #000000, 0px 0px 0px #0d0d0d;
+  background: rgba(204, 163, 0, 0.78);
+  border-radius: 10px;
+  border: 1px solid #010101;
+}
+input[type=range]::-webkit-slider-thumb {
+  box-shadow: 0px 0px 0px #000031, 0px 0px 0px #00004b;
+  border: 2px solid #806600;
+  height: 47px;
+  width: 24px;
+  border-radius: 15px;
+  background: #ffd633;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -18.8px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: rgba(230, 183, 0, 0.78);
+}
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 11.4px;
+  cursor: pointer;
+  box-shadow: 0px 0px 1px #000000, 0px 0px 0px #0d0d0d;
+  background: rgba(204, 163, 0, 0.78);
+  border-radius: 10px;
+  border: 1px solid #010101;
+}
+input[type=range]::-moz-range-thumb {
+  box-shadow: 0px 0px 0px #000031, 0px 0px 0px #00004b;
+  border: 2px solid #806600;
+  height: 47px;
+  width: 24px;
+  border-radius: 15px;
+  background: #ffd633;
+  cursor: pointer;
+}
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 11.4px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+  background: rgba(179, 143, 0, 0.78);
+  border: 1px solid #010101;
+  border-radius: 20px;
+  box-shadow: 0px 0px 1px #000000, 0px 0px 0px #0d0d0d;
+}
+input[type=range]::-ms-fill-upper {
+  background: rgba(204, 163, 0, 0.78);
+  border: 1px solid #010101;
+  border-radius: 20px;
+  box-shadow: 0px 0px 1px #000000, 0px 0px 0px #0d0d0d;
+}
+input[type=range]::-ms-thumb {
+  box-shadow: 0px 0px 0px #000031, 0px 0px 0px #00004b;
+  border: 2px solid #806600;
+  height: 47px;
+  width: 24px;
+  border-radius: 15px;
+  background: #ffd633;
+  cursor: pointer;
+  height: 11.4px;
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: rgba(204, 163, 0, 0.78);
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: rgba(230, 183, 0, 0.78);
+}
+
 
 /* ==========================================================================
    Helper classes
