--- a/css/main.css
+++ b/css/main.css
@@ -1,276 +1,174 @@
-/*! HTML5 Boilerplate v5.3.0 | MIT License | https://html5boilerplate.com/ */
-
-/*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
-
-/* ==========================================================================
-   Base styles: opinionated defaults
-   ========================================================================== */
-
-html {
-    color: #222;
-    font-size: 1em;
-    line-height: 1.4;
+body {
+  font-family: 'Hammersmith One', sans-serif;
+  color: #131B23;
+  text-align: center;
+  background-color: #E8F7EA;
 }
 
-/*
- * Remove text-shadow in selection highlight:
- * https://twitter.com/miketaylr/status/12228805301
- *
- * These selection rule sets have to be separate.
- * Customize the background color to match your design.
- */
-
-::-moz-selection {
-    background: #b3d4fc;
-    text-shadow: none;
+h3 {
+  margin-bottom: 1em;
 }
 
-::selection {
-    background: #b3d4fc;
-    text-shadow: none;
+.top {
+  margin-top: 5%;
+  width: 85%;
+  margin: 0 auto;
 }
 
-/*
- * A better looking default horizontal rule
- */
-
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
+.wage-input {
+  margin: 1rem;
 }
 
-/*
- * Remove the gap between audio, canvas, iframes,
- * images, videos and the bottom of their containers:
- * https://github.com/h5bp/html5-boilerplate/issues/440
- */
-
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
-    vertical-align: middle;
+#dollar,
+#cents {
+  margin-right: 1.5rem;
+  width: 25%;
 }
 
-/*
- * Remove default fieldset styles.
- */
-
-fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
+#wage-box-container {
+  display: flex;
+  justify-content: center;
 }
 
-/*
- * Allow only vertical resizing of textareas.
- */
-
-textarea {
-    resize: vertical;
+.wage-box  {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 200px;
+  height: 110px;
+  color: white;
+  background-color: #2274A5;
+  margin: 5px;
+  padding: 20px;
+  border-radius: 15px;
+  font-size: 42px;
+  vertical-align: top;
 }
 
-/* ==========================================================================
-   Browser Upgrade Prompt
-   ========================================================================== */
-
-.browserupgrade {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+.cumulative {
+  background-color: #4CAF50;
 }
 
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
+.maint {
+  flex-basis: 100%;
+}
+
+.subt {
+  font-size: 24px;
+  align-self: flex-end;
+}
+
+#startStopBtn {
+  display: inline-block;
+  border: none;
+  border-radius: 1rem;
+  color: white;
+  padding: 1rem 2rem;
+  text-align: center;
+  text-decoration: none;
+  font-size: 1.3em;
+  margin: 10 auto;
+  cursor: pointer;
+}
 
 
-   body {
-     font-family: 'Hammersmith One', sans-serif;
-     color: #131B23;
-     text-align: center;
-     background-color: #E8F7EA;
-   }
+.startCounter {
+ background-color: #4CAF50;
+}
+.startCounter:hover {
+  background-color: #4CBF50;
+}
 
-   h3 {
-     margin-bottom: 1em;
-   }
+.stopCounter {
+  background-color: #cc0000;
+}
+.stopCounter:hover {
+  background-color: #ff1a1a;
+}
 
-   .top {
-     margin-top: 5%;
-     width: 85%;
-     margin: 0 auto;
-   }
+.container {
+  display: flex;
+}
 
-   .wage-input {
-     margin: 1rem;
-   }
+#pigdiv {
+  margin: 0 auto;
+  margin-top: 10px;
+  width: 70%;
+  /*padding: 30px;*/
+}
 
-   #dollar,
-   #cents {
-     margin-right: 1.5rem;
-     width: 25%;
-   }
+#pigsvg {
+  margin: 0 auto;
+  width: 80%;
+}
 
-   .wage-display-group, .wage-display-group2  {
-     display: inline-block;
-     width: 200px;
-     height: 110px;
-     color: white;
-     background-color: #2274A5;
-     margin: 0 auto;
-     padding: 20px;
-     border-radius: 15px;
-     font-size: 42px;
-     vertical-align: top;
-   }
+#pbank {
+  float: center;
+  width: 100%;
+}
 
-   .wage-display-group2 {
-     /*display: none;*/
-     background-color: #4CAF50;
-   }
+@media (max-width: 600px) {
+  .wage-box {
+    width: 40%;
+    height: auto;
+    padding: 10px;
+    border-radius: 15px;
+    font-size: 24px;
+    vertical-align: top;
+  }
 
-   .subt {
-     font-size: 24px;
-   }
+  #startStopBtn {
+    height: 50px;
+    width: 100px;
+    display: inline-block;
+    border-radius: 1rem;
+    color: white;
+    padding: 1rem 2rem;
+    text-align: center;
+    text-decoration: none;
+    font-size: 1.3em;
+    margin: 10 auto;
+    cursor: pointer;
+  }
 
-   #startStopBtn {
-     display: inline-block;
-     border: none;
-     border-radius: 1rem;
-     color: white;
-     padding: 1rem 2rem;
-     text-align: center;
-     text-decoration: none;
-     font-size: 1.3em;
-     margin: 10 auto;
-     cursor: pointer;
-   }
+  #playSVG {
+    display: inline-block;
+    float: left;
+  }
 
+  #stopbtn {
+    margin-left: 0px;
+    margin-top: 10px;
+  }
 
-   .startCounter {
-     background-color: #4CAF50;
-   }
-   .startCounter:hover {
-     background-color: #4CBF50;
-   }
+  #dollar-section,
+  #cents-section {
+   width: 75%;
+   margin: 0 auto;
+  }
 
-   .stopCounter {
-     background-color: #cc0000;
-   }
-   .stopCounter:hover {
-     background-color: #ff1a1a;
-   }
+  #dollar,
+  #cents {
+   width: 85%;
+  }
 
+  #coindiv {
+   width: 100%;
+   height: auto;
+  }
 
-   .container {
-     display: flex;
-     flex-wrap: wrap;
-     justify-content: center;
-   }
-   .coin {
-     width: 10%;
-     margin: 1rem;
-   }
+  .coin {
+   width: 18%;
+   margin: 1rem;
+  }
 
-   #coindiv {
-     width: 75%;
-     height: 30%;
-     margin:0 auto;
-   }
+ #pigdiv {
+    width: 90%;
+  }
+}
 
-   #pigdiv {
-     margin: 0 auto;
-     margin-top: 10px;
-     height: 400px;
-     width: 50%;
-     padding: 30px;
-     /*background-image: url(../img/piggybank.svg);*/
-     background-repeat: no-repeat;
-     background-position: center center;
-     border: 2px solid #888;
-   }
-
-   #pigsvg {
-     margin: 0 auto;
-     width: 80%;
-   }
-
-   #pbank {
-     float: center;
-     width: 100%;
-   }
-
-   @media (max-width: 600px) {
-     .wage-display-group, .wage-display-group2 {
-       width: 40%;
-       height: auto;
-       padding: 10px;
-       border-radius: 15px;
-       font-size: 24px;
-       vertical-align: top;
-     }
-
-     #startStopBtn {
-       height: 50px;
-       width: 100px;
-       display: inline-block;
-       border-radius: 1rem;
-       color: white;
-       padding: 1rem 2rem;
-       text-align: center;
-       text-decoration: none;
-       font-size: 1.3em;
-       margin: 10 auto;
-       cursor: pointer;
-     }
-
-     #playSVG {
-       display: inline-block;
-       float: left;
-     }
-
-     #stopbtn {
-       margin-left: 0px;
-       margin-top: 10px;
-     }
-
-     #dollar-section,
-     #cents-section {
-       width: 75%;
-       margin: 0 auto;
-     }
-
-     #dollar,
-     #cents {
-       width: 85%;
-     }
-
-     #coindiv {
-       width: 100%;
-       height: auto;
-     }
-
-     .coin {
-       width: 18%;
-       margin: 1rem;
-     }
-
-     #pigdiv {
-       width: 90%;
-     }
-   }
 /* Slider Styling */
 
 input[type=range] {
@@ -357,175 +255,4 @@ input[type=range]:focus::-ms-fill-lower {
 }
 input[type=range]:focus::-ms-fill-upper {
   background: rgba(230, 183, 0, 0.78);
-}
-
-
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-/*
- * Hide visually and from screen readers
- */
-
-.hidden {
-    display: none !important;
-}
-
-/*
- * Hide only visually, but have it available for screen readers:
- * http://snook.ca/archives/html_and_css/hiding-content-for-accessibility
- */
-
-.visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-}
-
-/*
- * Extends the .visuallyhidden class to allow the element
- * to be focusable when navigated to via the keyboard:
- * https://www.drupal.org/node/897638
- */
-
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-}
-
-/*
- * Hide visually and from screen readers, but maintain layout
- */
-
-.invisible {
-    visibility: hidden;
-}
-
-/*
- * Clearfix: contain floats
- *
- * For modern browsers
- * 1. The space content is one way to avoid an Opera bug when the
- *    `contenteditable` attribute is included anywhere else in the document.
- *    Otherwise it causes space to appear at the top and bottom of elements
- *    that receive the `clearfix` class.
- * 2. The use of `table` rather than `block` is only necessary if using
- *    `:before` to contain the top-margins of child elements.
- */
-
-.clearfix:before,
-.clearfix:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-/* ==========================================================================
-   EXAMPLE Media Queries for Responsive Design.
-   These examples override the primary ('mobile first') styles.
-   Modify as content requires.
-   ========================================================================== */
-
-@media only screen and (min-width: 35em) {
-    /* Style adjustments for viewports that meet the condition */
-}
-
-@media print,
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 1.25dppx),
-       (min-resolution: 120dpi) {
-    /* Style adjustments for high resolution devices */
-}
-
-/* ==========================================================================
-   Print styles.
-   Inlined to avoid the additional HTTP request:
-   http://www.phpied.com/delay-loading-your-print-css/
-   ========================================================================== */
-
-@media print {
-    *,
-    *:before,
-    *:after,
-    *:first-letter,
-    *:first-line {
-        background: transparent !important;
-        color: #000 !important; /* Black prints faster:
-                                   http://www.sanbeiji.com/archives/953 */
-        box-shadow: none !important;
-        text-shadow: none !important;
-    }
-
-    a,
-    a:visited {
-        text-decoration: underline;
-    }
-
-    a[href]:after {
-        content: " (" attr(href) ")";
-    }
-
-    abbr[title]:after {
-        content: " (" attr(title) ")";
-    }
-
-    /*
-     * Don't show links that are fragment identifiers,
-     * or use the `javascript:` pseudo protocol
-     */
-
-    a[href^="#"]:after,
-    a[href^="javascript:"]:after {
-        content: "";
-    }
-
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
-    }
-
-    /*
-     * Printing Tables:
-     * http://css-discuss.incutio.com/wiki/Printing_Tables
-     */
-
-    thead {
-        display: table-header-group;
-    }
-
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
-
-    img {
-        max-width: 100% !important;
-    }
-
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
-
-    h2,
-    h3 {
-        page-break-after: avoid;
-    }
 }
