--- a/css/main.css
+++ b/css/main.css
@@ -5,50 +5,27 @@ body {
   background-color: #E8F7EA;
 }
 
-h3 {
-  margin-bottom: 1em;
-}
-
 .top {
-  margin-top: 5%;
-  width: 85%;
-  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
-.wage-input {
-  margin: 1rem;
+.toptitle {
+  font-size: 40px;
 }
 
-#dollar,
-#cents {
-  margin-right: 1.5rem;
-  width: 25%;
-}
-
-#wage-box-container {
-  display: flex;
-  justify-content: center;
-}
-
-.wage-box  {
-  display: flex;
-  align-items: center;
-  align-content: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  width: 200px;
-  height: 110px;
-  color: white;
-  background-color: #2274A5;
-  margin: 5px;
-  padding: 20px;
-  border-radius: 15px;
-  font-size: 42px;
-  vertical-align: top;
+.topsubtitle {
+  font-size: 18px;
 }
 
 .cumulative {
-  background-color: #4CAF50;
+  font-size: 42px;
+  position: absolute;
+  top: 55%;
+  left: 0;
+  color: #95AD66;
+  text-align: center;
+  width: 100%;
 }
 
 .maint {
@@ -60,19 +37,70 @@ h3 {
   align-self: flex-end;
 }
 
-#startStopBtn {
-  display: inline-block;
-  border: none;
-  border-radius: 1rem;
-  color: white;
-  padding: 1rem 2rem;
-  text-align: center;
-  text-decoration: none;
-  font-size: 1.3em;
-  margin: 10 auto;
-  cursor: pointer;
+.container {
+  display: flex;
 }
 
+#pigdiv {
+  margin: 0 auto;
+  width: 70%;
+  max-width: 600px;
+  position: relative;
+}
+
+#pigsvg {
+  margin: 0 auto;
+  width: 80%;
+}
+
+.belowPig {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+#wage-box-container {
+  display: flex;
+  justify-content: center;
+}
+
+.wage-box  {
+  width: 150px;
+  height: 100px;
+  color: #2274A5;
+  border: 3px solid #2274A5;
+  margin: 5px;
+  padding: 15px 10px 5px 10px;
+  border-radius: 15px;
+  font-size: 42px;
+}
+
+.wage-input {
+  width: 300px;
+  margin: 5px;
+  padding: 10px;
+}
+
+#dollar,
+#cents {
+  width: 100%;
+}
+
+
+#startStopBtn {
+  padding: 20px 10px 0 10px;
+  display: inline-block;
+  border: none;
+  border-radius: 10px;
+  color: white;
+  text-decoration: none;
+  font-size: 32px;
+  width: 150px;
+  height: 100px;
+  margin: 5px;
+  cursor: pointer;
+}
 
 .startCounter {
  background-color: #4CAF50;
@@ -88,39 +116,30 @@ h3 {
   background-color: #ff1a1a;
 }
 
-.container {
-  display: flex;
-}
+@media (max-width: 730px) {
 
-#pigdiv {
-  margin: 0 auto;
-  margin-top: 10px;
-  width: 70%;
-  /*padding: 30px;*/
-}
-
-#pigsvg {
-  margin: 0 auto;
-  width: 80%;
-}
-
-#pbank {
-  float: center;
-  width: 100%;
-}
-
-@media (max-width: 600px) {
-  .wage-box {
-    width: 40%;
-    height: auto;
-    padding: 10px;
-    border-radius: 15px;
+  .cumulative {
     font-size: 24px;
-    vertical-align: top;
+  }
+
+  #wage-box-container {
+    width: 50%;
+  }
+
+  .wage-box {
+    width: 100%;
+    height: 70px;
+    font-size: 24px;
+  }
+
+  .wage-input {
+    width: 80%;
+    margin: 5px;
+    padding: 10px;
   }
 
   #startStopBtn {
-    height: 50px;
+    height: 70px;
     width: 100px;
     display: inline-block;
     border-radius: 1rem;
@@ -129,8 +148,14 @@ h3 {
     text-align: center;
     text-decoration: none;
     font-size: 1.3em;
-    margin: 10 auto;
+    margin: 10px;
+    padding: 20px 10px 0 10px;
     cursor: pointer;
+    border: 3px solid #4CAF50;
+  }
+
+  #startStopBtn.stopCounter {
+    border: 3px solid #cc0000;
   }
 
   #playSVG {
@@ -141,27 +166,6 @@ h3 {
   #stopbtn {
     margin-left: 0px;
     margin-top: 10px;
-  }
-
-  #dollar-section,
-  #cents-section {
-   width: 75%;
-   margin: 0 auto;
-  }
-
-  #dollar,
-  #cents {
-   width: 85%;
-  }
-
-  #coindiv {
-   width: 100%;
-   height: auto;
-  }
-
-  .coin {
-   width: 18%;
-   margin: 1rem;
   }
 
  #pigdiv {
